<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jwhh.notekeeper.presentation.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".presentation.MainActivity"
        tools:showIn="@layout/activity_main">

        <EditText
            android:id="@+id/textNoteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Hint Note text"
            android:inputType="textMultiLine"
            android:text="@={viewModel.noteInfo.text}"
            app:layout_constraintEnd_toEndOf="@+id/textNoteTitle"
            app:layout_constraintStart_toStartOf="@+id/textNoteTitle"
            app:layout_constraintTop_toBottomOf="@+id/textNoteTitle" />

        <Spinner
            android:id="@+id/spinnerCourses"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textNoteTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="Note title"
            android:inputType="textMultiLine"
            android:text="@={viewModel.noteInfo.title}"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
            app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCourses" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.500684" />

        <ImageView
            android:id="@+id/imageViewLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNoteText"
            app:popularityIcon="@{viewModel.popularity}" />

        <TextView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{Integer.toString(viewModel.likes)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLikes" />

        <Button
            android:id="@+id/buttonLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{()->viewModel.onLike()}"
            android:text="@string/likes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/likes" />

        <Button
            android:id="@+id/buttonSurvey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/take_survey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="@{100}"
            app:hideIfZero="@{viewModel.likes}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLikes"
            app:progressScaled="@{viewModel.likes}"
            app:progressTint="@{viewModel.popularity}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>